syntax = "proto3";

package account_processing.proto;

option csharp_namespace = "ShadowPal.Service.Grpc";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AccountProcessingService{
  rpc GetOperations(GetOperationsRequest) returns (GetOperationsResponse);
  rpc GetCurrency(google.protobuf.Empty) returns (GetCurrencyResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc UpdateBalance(UpdateBalanceRequest) returns (google.protobuf.Empty);
  rpc CreateAccount(CreateAccountRequest) returns(google.protobuf.Empty);
  rpc CreateOperation(CreateOperationRequest) returns(google.protobuf.Empty);
}

message GetOperationsRequest{
  int64 user_id = 1;
  google.protobuf.Timestamp moment = 2;
}

message GetOperationsResponse{
  repeated Operation operations = 1;
}

message Operation{
  int64 id = 1;
  OperationType operation_type = 2;
  float amount = 3;
  int64 category_id = 4;
  string comment = 5;
  google.protobuf.Timestamp moment = 6;
}

message GetCurrencyResponse{
  int64 id = 1;
  string name = 2;
  string short_name = 3;
  string label = 4;
}

message GetBalanceRequest{
  int64 user_id = 1;
}

message GetBalanceResponse{
  float balance = 1;
}

message UpdateBalanceRequest{
  int64 user_id = 1;
  float amount = 2;
}

message CreateAccountRequest{
  int64 user_id = 1;
  float balance = 2;
  google.protobuf.Timestamp initial_date = 3;
  int64 currency_id = 4;
}

message CreateOperationRequest{
  int64 user_id = 1;
  OperationType operation_type = 2;
  float amount = 3;
  int64 category_id = 4;
  string comment = 5;
  google.protobuf.Timestamp moment = 6;
}

enum OperationType{
  UNKNOWN = 0;
  INCOME = 1;
  EXPENSE = 2;
}